--- a/katip-elasticsearch/katip-elasticsearch.cabal
+++ b/katip-elasticsearch/katip-elasticsearch.cabal
@@ -1,89 +1,85 @@
-name:                katip-elasticsearch
-synopsis:            ElasticSearch scribe for the Katip logging framework.
-description:         See README.md for more details.
-version:             0.4.0.1
-license:             BSD3
-license-file:        LICENSE
-author:              Ozgun Ataman, Michael Xavier
-maintainer:          michael.xavier@soostone.com
-copyright:           Soostone Inc, 2015-2016
-category:            Data
-build-type:          Simple
-cabal-version:       >=1.10
-extra-source-files:
-  README.md
-  changelog.md
-  bench/Main.hs
-  examples/example.hs
-  test/Main.hs
-tested-with: GHC == 7.8.4, GHC== 7.10.3
+-- This file has been generated from package.yaml by hpack version 0.17.1.
+--
+-- see: https://github.com/sol/hpack
 
-flag lib-Werror
-  default: False
+name:           katip-elasticsearch
+synopsis:       ElasticSearch scribe for the Katip logging framework.
+description:    See README.md for more details.
+version:        0.4.0.1
+license:        BSD3
+license-file:   LICENSE
+author:         Ozgun Ataman, Michael Xavier
+maintainer:     michael.xavier@soostone.com
+copyright:      Soostone Inc 2015-2017
+category:       Data
+homepage:       https://github.com/Soostone/katip#readme
+bug-reports:    https://github.com/Soostone/katip/issues
+build-type:     Simple
+cabal-version:  >= 1.10
+tested-with:    GHC==7.8.4 GHC==7.10.3
+
+extra-source-files:
+    bench/Main.hs
+    changelog.md
+    examples/example.hs
+    README.md
+    test/Main.hs
+
+source-repository head
+  type: git
+  location: https://github.com/Soostone/katip
+
+flag lib-werror
   manual: True
+  default: False
 
 library
   exposed-modules:
-    Katip.Scribes.ElasticSearch
-    Katip.Scribes.ElasticSearch.Annotations
-    Katip.Scribes.ElasticSearch.Internal
+      Katip.Scribes.ElasticSearch
+      Katip.Scribes.ElasticSearch.Annotations
+      Katip.Scribes.ElasticSearch.Internal
+  other-modules:
+      Paths_katip_elasticsearch
   build-depends:
       base >=4.6 && <5
-    , katip >= 0.2.0.0 && < 0.6
-    , bloodhound >= 0.13.0.0 && < 0.16
-    , uuid >= 1.3.12 && < 1.4
+    , katip >=0.2.0.0 && <0.6
     , aeson >=0.6 && <1.3
-    , stm >= 2.4.3 && < 2.5
-    , stm-chans >= 3.0.0.2 && < 3.1
-    , async >= 2.0.1.0 && < 2.2
-    , enclosed-exceptions >= 1.0.0 && < 1.1
-    , http-client >= 0.3 && < 0.6
-    , text >= 0.11 && < 1.3
-    , retry >= 0.7 && < 0.8
-    , exceptions
-    , scientific >= 0.3.0.0 && < 0.4
-    , unordered-containers >= 0.1.0.0 && < 0.3
-    , transformers >= 0.2 && < 0.6
-    , http-types >= 0.8 && < 0.10
-    , time >= 1 && < 1.9
+    , async >=2.0.1.0 && <2.2
+    , bloodhound >=0.13.0.0 && <0.16
     , bytestring
-  hs-source-dirs:      src
-  default-language:    Haskell2010
-  hs-source-dirs:      src
-  default-language:    Haskell2010
-  if flag(lib-Werror)
+    , enclosed-exceptions >=1.0.0 && <1.1
+    , exceptions
+    , http-client >=0.3 && <0.6
+    , http-types >=0.8 && <0.10
+    , retry >=0.7 && <0.8
+    , scientific >=0.3.0.0 && <0.4
+    , stm >=2.4.3 && <2.5
+    , stm-chans >=3.0.0.2 && <3.1
+    , text >=0.11 && <1.3
+    , time >=1 && <1.9
+    , transformers >=0.2 && <0.6
+    , unagi-chan
+    , unordered-containers >=0.1.0.0 && <0.3
+    , uuid >=1.3.12 && <1.4
+  if flag(lib-werror)
     ghc-options: -Wall -Werror
-
-benchmark bench
-  type: exitcode-stdio-1.0
-  main-is: Main.hs
-  hs-source-dirs: bench
-  default-language:    Haskell2010
-  ghc-options: -O2
-  build-depends:
-                 base
-               , katip-elasticsearch
-               , bloodhound
-               , deepseq
-               , criterion >= 1.1.0.0
-               , rng-utils
-               , uuid
-               , text
-               , unordered-containers
-               , aeson
+  hs-source-dirs:
+      src
+  default-language: Haskell2010
 
 test-suite test
   type: exitcode-stdio-1.0
   main-is: Main.hs
-  hs-source-dirs: test
-  default-language:    Haskell2010
+  hs-source-dirs:
+      test
+  default-language: Haskell2010
   build-depends:
       katip-elasticsearch
     , katip
     , http-client
     , bloodhound
     , base
-    , tasty >= 0.11
+    , tasty >=0.11
     , tasty-hunit
     , tasty-quickcheck
     , quickcheck-instances
@@ -101,8 +97,27 @@ test-suite test
     , stm
     , bytestring
     , tagged
-
-  if flag(lib-Werror)
+  if flag(lib-werror)
     ghc-options: -Wall -Werror
-
   ghc-options: -threaded -rtsopts
+
+benchmark katip-elasticsearch-bench
+  type: exitcode-stdio-1.0
+  main-is: Main.hs
+  hs-source-dirs:
+      bench
+  ghc-options: -O2
+  build-depends:
+      base
+    , katip
+    , katip-elasticsearch
+    , aeson
+    , bloodhound
+    , criterion >=1.1.0.0
+    , deepseq
+    , http-client
+    , rng-utils
+    , text
+    , unordered-containers
+    , uuid
+  default-language: Haskell2010
